src/Common/Grammars/Output/DaedalusParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Daedalus.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class DaedalusParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, Const=34, Var=35, If=36, Int=37, Else=38, Func=39, 
		String=40, Class=41, Void=42, Return=43, Float=44, Prototype=45, Instance=46, 
		Null=47, NoFunc=48, While=49, Break=50, Continue=51, Extern=52, Identifier=53, 
		IntegerLiteral=54, FloatLiteral=55, StringLiteral=56, Whitespace=57, Newline=58, 
		BlockComment=59, LineComment=60, UnexpectedCharacter=61;
	public const int
		RULE_daedalusFile = 0, RULE_blockDef = 1, RULE_inlineDef = 2, RULE_externFunctionDecl = 3, 
		RULE_functionDef = 4, RULE_constDef = 5, RULE_classDef = 6, RULE_prototypeDef = 7, 
		RULE_instanceDef = 8, RULE_instanceDecl = 9, RULE_varDecl = 10, RULE_constArrayDef = 11, 
		RULE_constArrayAssignment = 12, RULE_constValueDef = 13, RULE_constValueAssignment = 14, 
		RULE_varArrayDecl = 15, RULE_varArrayAssignment = 16, RULE_varValueDecl = 17, 
		RULE_varValueAssignment = 18, RULE_parameterList = 19, RULE_parameterDecl = 20, 
		RULE_statementBlock = 21, RULE_statement = 22, RULE_functionCall = 23, 
		RULE_assignment = 24, RULE_elseBlock = 25, RULE_elseIfBlock = 26, RULE_ifBlock = 27, 
		RULE_ifBlockStatement = 28, RULE_returnStatement = 29, RULE_whileStatement = 30, 
		RULE_breakStatement = 31, RULE_continueStatement = 32, RULE_expression = 33, 
		RULE_arrayIndex = 34, RULE_arraySize = 35, RULE_value = 36, RULE_referenceAtom = 37, 
		RULE_reference = 38, RULE_dataType = 39, RULE_nameNode = 40, RULE_parentReference = 41, 
		RULE_assignmentOperator = 42, RULE_addOperator = 43, RULE_bitMoveOperator = 44, 
		RULE_compOperator = 45, RULE_eqOperator = 46, RULE_unaryOperator = 47, 
		RULE_multOperator = 48, RULE_binAndOperator = 49, RULE_binOrOperator = 50, 
		RULE_logAndOperator = 51, RULE_logOrOperator = 52;
	public static readonly string[] ruleNames = {
		"daedalusFile", "blockDef", "inlineDef", "externFunctionDecl", "functionDef", 
		"constDef", "classDef", "prototypeDef", "instanceDef", "instanceDecl", 
		"varDecl", "constArrayDef", "constArrayAssignment", "constValueDef", "constValueAssignment", 
		"varArrayDecl", "varArrayAssignment", "varValueDecl", "varValueAssignment", 
		"parameterList", "parameterDecl", "statementBlock", "statement", "functionCall", 
		"assignment", "elseBlock", "elseIfBlock", "ifBlock", "ifBlockStatement", 
		"returnStatement", "whileStatement", "breakStatement", "continueStatement", 
		"expression", "arrayIndex", "arraySize", "value", "referenceAtom", "reference", 
		"dataType", "nameNode", "parentReference", "assignmentOperator", "addOperator", 
		"bitMoveOperator", "compOperator", "eqOperator", "unaryOperator", "multOperator", 
		"binAndOperator", "binOrOperator", "logAndOperator", "logOrOperator"
	};

	private static readonly string[] _LiteralNames = {
		null, "';'", "','", "'{'", "'}'", "'('", "')'", "'['", "']'", "'='", "'.'", 
		"'+='", "'-='", "'*='", "'/='", "'+'", "'-'", "'<<'", "'>>'", "'<'", "'>'", 
		"'<='", "'>='", "'=='", "'!='", "'!'", "'~'", "'*'", "'/'", "'%'", "'&'", 
		"'|'", "'&&'", "'||'", null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, "'while'", "'break'", "'continue'", 
		"'extern'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, "Const", "Var", 
		"If", "Int", "Else", "Func", "String", "Class", "Void", "Return", "Float", 
		"Prototype", "Instance", "Null", "NoFunc", "While", "Break", "Continue", 
		"Extern", "Identifier", "IntegerLiteral", "FloatLiteral", "StringLiteral", 
		"Whitespace", "Newline", "BlockComment", "LineComment", "UnexpectedCharacter"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Daedalus.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static DaedalusParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public DaedalusParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public DaedalusParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class DaedalusFileContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(DaedalusParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BlockDefContext[] blockDef() {
			return GetRuleContexts<BlockDefContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public BlockDefContext blockDef(int i) {
			return GetRuleContext<BlockDefContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public InlineDefContext[] inlineDef() {
			return GetRuleContexts<InlineDefContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public InlineDefContext inlineDef(int i) {
			return GetRuleContext<InlineDefContext>(i);
		}
		public DaedalusFileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_daedalusFile; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDaedalusVisitor<TResult> typedVisitor = visitor as IDaedalusVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDaedalusFile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DaedalusFileContext daedalusFile() {
		DaedalusFileContext _localctx = new DaedalusFileContext(Context, State);
		EnterRule(_localctx, 0, RULE_daedalusFile);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 110;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					State = 108;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
					case 1:
						{
						State = 106;
						blockDef();
						}
						break;
					case 2:
						{
						State = 107;
						inlineDef();
						}
						break;
					}
					} 
				}
				State = 112;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			}
			State = 113;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockDefContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FunctionDefContext functionDef() {
			return GetRuleContext<FunctionDefContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ClassDefContext classDef() {
			return GetRuleContext<ClassDefContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PrototypeDefContext prototypeDef() {
			return GetRuleContext<PrototypeDefContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public InstanceDefContext instanceDef() {
			return GetRuleContext<InstanceDefContext>(0);
		}
		public BlockDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_blockDef; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDaedalusVisitor<TResult> typedVisitor = visitor as IDaedalusVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlockDef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockDefContext blockDef() {
		BlockDefContext _localctx = new BlockDefContext(Context, State);
		EnterRule(_localctx, 2, RULE_blockDef);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 119;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Func:
				{
				State = 115;
				functionDef();
				}
				break;
			case Class:
				{
				State = 116;
				classDef();
				}
				break;
			case Prototype:
				{
				State = 117;
				prototypeDef();
				}
				break;
			case Instance:
				{
				State = 118;
				instanceDef();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 122;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__0) {
				{
				State = 121;
				Match(T__0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InlineDefContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExternFunctionDeclContext externFunctionDecl() {
			return GetRuleContext<ExternFunctionDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConstDefContext constDef() {
			return GetRuleContext<ConstDefContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public VarDeclContext varDecl() {
			return GetRuleContext<VarDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public InstanceDeclContext instanceDecl() {
			return GetRuleContext<InstanceDeclContext>(0);
		}
		public InlineDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_inlineDef; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDaedalusVisitor<TResult> typedVisitor = visitor as IDaedalusVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInlineDef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InlineDefContext inlineDef() {
		InlineDefContext _localctx = new InlineDefContext(Context, State);
		EnterRule(_localctx, 4, RULE_inlineDef);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 128;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Extern:
				{
				State = 124;
				externFunctionDecl();
				}
				break;
			case Const:
				{
				State = 125;
				constDef();
				}
				break;
			case Var:
				{
				State = 126;
				varDecl();
				}
				break;
			case Instance:
				{
				State = 127;
				instanceDecl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 130;
			Match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExternFunctionDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Extern() { return GetToken(DaedalusParser.Extern, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Func() { return GetToken(DaedalusParser.Func, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public DataTypeContext dataType() {
			return GetRuleContext<DataTypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NameNodeContext nameNode() {
			return GetRuleContext<NameNodeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParameterListContext parameterList() {
			return GetRuleContext<ParameterListContext>(0);
		}
		public ExternFunctionDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_externFunctionDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDaedalusVisitor<TResult> typedVisitor = visitor as IDaedalusVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExternFunctionDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExternFunctionDeclContext externFunctionDecl() {
		ExternFunctionDeclContext _localctx = new ExternFunctionDeclContext(Context, State);
		EnterRule(_localctx, 6, RULE_externFunctionDecl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 132;
			Match(Extern);
			State = 133;
			Match(Func);
			State = 134;
			dataType();
			State = 135;
			nameNode();
			State = 136;
			parameterList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionDefContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Func() { return GetToken(DaedalusParser.Func, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public DataTypeContext dataType() {
			return GetRuleContext<DataTypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NameNodeContext nameNode() {
			return GetRuleContext<NameNodeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParameterListContext parameterList() {
			return GetRuleContext<ParameterListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementBlockContext statementBlock() {
			return GetRuleContext<StatementBlockContext>(0);
		}
		public FunctionDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionDef; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDaedalusVisitor<TResult> typedVisitor = visitor as IDaedalusVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionDef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionDefContext functionDef() {
		FunctionDefContext _localctx = new FunctionDefContext(Context, State);
		EnterRule(_localctx, 8, RULE_functionDef);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 138;
			Match(Func);
			State = 139;
			dataType();
			State = 140;
			nameNode();
			State = 141;
			parameterList();
			State = 142;
			statementBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConstDefContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Const() { return GetToken(DaedalusParser.Const, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public DataTypeContext dataType() {
			return GetRuleContext<DataTypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConstValueDefContext[] constValueDef() {
			return GetRuleContexts<ConstValueDefContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConstValueDefContext constValueDef(int i) {
			return GetRuleContext<ConstValueDefContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConstArrayDefContext[] constArrayDef() {
			return GetRuleContexts<ConstArrayDefContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConstArrayDefContext constArrayDef(int i) {
			return GetRuleContext<ConstArrayDefContext>(i);
		}
		public ConstDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_constDef; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDaedalusVisitor<TResult> typedVisitor = visitor as IDaedalusVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConstDef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConstDefContext constDef() {
		ConstDefContext _localctx = new ConstDefContext(Context, State);
		EnterRule(_localctx, 10, RULE_constDef);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 144;
			Match(Const);
			State = 145;
			dataType();
			State = 148;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				{
				State = 146;
				constValueDef();
				}
				break;
			case 2:
				{
				State = 147;
				constArrayDef();
				}
				break;
			}
			State = 157;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__1) {
				{
				{
				State = 150;
				Match(T__1);
				State = 153;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
				case 1:
					{
					State = 151;
					constValueDef();
					}
					break;
				case 2:
					{
					State = 152;
					constArrayDef();
					}
					break;
				}
				}
				}
				State = 159;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassDefContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Class() { return GetToken(DaedalusParser.Class, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public NameNodeContext nameNode() {
			return GetRuleContext<NameNodeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public VarDeclContext[] varDecl() {
			return GetRuleContexts<VarDeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public VarDeclContext varDecl(int i) {
			return GetRuleContext<VarDeclContext>(i);
		}
		public ClassDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classDef; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDaedalusVisitor<TResult> typedVisitor = visitor as IDaedalusVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClassDef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ClassDefContext classDef() {
		ClassDefContext _localctx = new ClassDefContext(Context, State);
		EnterRule(_localctx, 12, RULE_classDef);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 160;
			Match(Class);
			State = 161;
			nameNode();
			State = 162;
			Match(T__2);
			State = 168;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,8,Context);
			while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					State = 163;
					varDecl();
					State = 164;
					Match(T__0);
					}
					} 
				}
				State = 170;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,8,Context);
			}
			State = 171;
			Match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PrototypeDefContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Prototype() { return GetToken(DaedalusParser.Prototype, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public NameNodeContext nameNode() {
			return GetRuleContext<NameNodeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParentReferenceContext parentReference() {
			return GetRuleContext<ParentReferenceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementBlockContext statementBlock() {
			return GetRuleContext<StatementBlockContext>(0);
		}
		public PrototypeDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prototypeDef; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDaedalusVisitor<TResult> typedVisitor = visitor as IDaedalusVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrototypeDef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PrototypeDefContext prototypeDef() {
		PrototypeDefContext _localctx = new PrototypeDefContext(Context, State);
		EnterRule(_localctx, 14, RULE_prototypeDef);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 173;
			Match(Prototype);
			State = 174;
			nameNode();
			State = 175;
			Match(T__4);
			State = 176;
			parentReference();
			State = 177;
			Match(T__5);
			State = 178;
			statementBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InstanceDefContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Instance() { return GetToken(DaedalusParser.Instance, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public NameNodeContext nameNode() {
			return GetRuleContext<NameNodeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParentReferenceContext parentReference() {
			return GetRuleContext<ParentReferenceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementBlockContext statementBlock() {
			return GetRuleContext<StatementBlockContext>(0);
		}
		public InstanceDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_instanceDef; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDaedalusVisitor<TResult> typedVisitor = visitor as IDaedalusVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInstanceDef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InstanceDefContext instanceDef() {
		InstanceDefContext _localctx = new InstanceDefContext(Context, State);
		EnterRule(_localctx, 16, RULE_instanceDef);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 180;
			Match(Instance);
			State = 181;
			nameNode();
			State = 182;
			Match(T__4);
			State = 183;
			parentReference();
			State = 184;
			Match(T__5);
			State = 185;
			statementBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InstanceDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Instance() { return GetToken(DaedalusParser.Instance, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public NameNodeContext[] nameNode() {
			return GetRuleContexts<NameNodeContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public NameNodeContext nameNode(int i) {
			return GetRuleContext<NameNodeContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParentReferenceContext parentReference() {
			return GetRuleContext<ParentReferenceContext>(0);
		}
		public InstanceDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_instanceDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDaedalusVisitor<TResult> typedVisitor = visitor as IDaedalusVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInstanceDecl(this);
			else return visitor.VisitChildren(this);
		}
	}
